refactor: `GenericArrayListQueue` (#5355)